@@ -11,8 +11,12 @@ Yum::renderFlash();
 <div id="profile">
 
 <?php 
-if($model->id == Yii::app()->user->id && Yum::module()->messageSystem != false)
-	$this->renderPartial('/messages/new_messages');
+if($model->id == Yii::app()->user->id 
+		&& Yum::hasModule('messages')) {
+	Yii::import('application.modules.messages.models.YumMessage');
+	$this->renderPartial(
+			'application.modules.messages.views.messages.new_messages');
+}
 ?>
 
 <?php echo $model->getAvatar(); ?>
@@ -24,8 +28,9 @@ if(Yum::module()->enableFriendship)
 	$this->renderPartial('/friendship/friends', array('model' => $model)); ?> 
 	<br /> 
 <?php
-if(Yum::module()->messageSystem != YumMessage::MSG_NONE)
- $this->renderPartial('/messages/write_a_message', array('model' => $model)); ?> 
+if(@Yum::module('messages')->messageSystem != 0)
+$this->renderPartial('/messages/write_a_message', array(
+			'model' => $model)); ?> 
 <br /> 
 <?php
  if(Yum::module()->enableProfileComments && isset($model->profile))
